Change push server url to uri